--- a/style.css
+++ b/style.css
@@ -26,8 +26,7 @@ body {
     background-color: rgba(255, 255, 255, 0.9);
 }
 .calculator-grid button:active {
-    margin-top: 3px;
-    margin-bottom: -3px;
+    transform: scale(0.95);
 }
 .output {
     background-color: rgba(0, 0, 0, 0.8);
@@ -37,7 +36,7 @@ body {
     align-items: flex-end;
     justify-content: space-around;
     padding-right: 20px;
-
+    word-break: break-all;
 
 }
 
